<resources>
    <string name="app_name">Gastro Gini</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank </string>
    <string name="title_activity_bestellen">Bestellen</string>
    <string name="title_activity_fest_waehlen">Fest wählen</string>
    <string name="title_activity_verbinden">Verbinden</string>
    <string name="title_activity_fest_bearbeiten">Fest bearbeiten</string>
    <string-array name="produktList_array">
        <item>ProduktListe 1</item>
        <item>ProduktListe 2</item>
        <item>ProduktListe 3</item>
        <item>ProduktListe 4</item>
        <item>ProduktListe 5</item>
    </string-array>
    <string name="title_activity_tisch">Tisch Activity</string>
    <string name="title_activity_bestellen_tisch">Bestellen Tisch</string>
    <string name="preis">Preis</string>
    <string name="groesse">Grösse</string>
    <string name="produkt">Produkt</string>
    <string name="anzahl">Anzahl</string>
    <string name="title_activity_home_screen">Startbildschirm</string>
    <string name="title_activity_event_list">Feste Übersicht</string>
    <string name="title_activity_event_view">Fest View</string>
    <string name="title_activity_start_event">Start Fest </string>
    <string name="title_activity_join_event">Join Fest </string>
    <string name="title_activity_menu_main">Menükarte und Produkte</string>
    <string name="STATE_OPEN">Offnen</string>
    <string name="STATE_PAYED">Bezahlt</string>

    <!-- MenuMain -->
    <string name="menu_main_menuMapButtonText">Menükartenliste</string>
    <string name="menu_main_productsButtonText">Produkte</string>
    <string name="title_activity_menucard_list_view">Menükarten </string>
    <string name="title_activity_menucard_view">Menükarten</string>
    <string name="title_activity_editMenuItem">Bearbeiten</string>
    <string name="title_activity_service_home">Service</string>
    <string name="title_activity_table_order_view">Tisch Bestellung</string>
    <string name="title_activity_order_pay_view">Bezahlen</string>
    <string name="title_activity_new_order_view">Neue Bestellung</string>
    <string name="title_activity_order_control_view">Zusammenfassung</string>
    <string name="title_activity_product_description_list">Produkte</string>
    <string name="title_activity_menu_product_description_edit">Produkt bearbeiten
    </string>

    <string name="android_studio">Android Studio</string>
    <string name="android_email">android.studio@android.com</string>
    <string name="event_tables">Fest Tabelle</string>
    <string name="event_title">Fest Titel</string>
    <string name="amount_table">Anzahl Tabellen</string>
    <string name="start_date">Anfangsdatum</string>
    <string name="title">Titel</string>
    <string name="my_event">Meine Feste</string>
    <string name="other_events">Fremde Feste</string>
    <string name="join">Beitreten</string>
    <string name="pass_hint">Passwort(Fest)</string>
    <string name="form_name">Benutzername</string>
    <string name="start">Starten</string>
    <string name="host">Hosten</string>
    <string name="menu">Menükarten</string>
    <string name="events">Feste</string>
    <string name="host_event">Fest hosten</string>
    <string name="start_event">Fest starten</string>
    <string name="pay">Bezahlen</string>
    <string name="product">Produkt</string>
    <string name="hint_user">Benutzername</string>
    <string name="volume">Anzahl</string>
    <string name="complete">Abschliessen</string>
    <string name="close_order">Bestellung abschliessen</string>
    <string name="size">Grösse</string>
    <string name="new_order">Neue Bestellung</string>
    <string name="order_overview">Bestellungsübersicht</string>
    <string name="menu_card_list">Menükartenliste</string>
    <string name="open_order">Offene Bestellungen</string>
    <string name="stornieren">Stornieren</string>
    <string name="menukarten_und_produkte">Menükarten und Produkte</string>
    <string name="host_local_event">Fest lokal hosten</string>
    <string name="local_host">Lokal starten</string>
    <string name="menu_card">Menükarten</string>
    <string name="menu_product_list">Produktliste</string>
    <string name="summary_of_order">Zusammenfassung der Bestellungen</string>
    <string name="no_event_alert">Sie haben noch keine Feste erstellt, über den &quot;+&quot; Button können Sie Ihren eigenen Fest erstellen</string>
    <string name="table_order_view_title_supplement">Übersicht</string>

    <string name="dummy_data_1">aaa 1</string>
    <string name="dummy_data_2">aaa 2</string>
    <string name="dummy_data_3">aaa 3</string>

    <!--
    <string name="title_activity_service_home">ServiceHome</string>
    <string name="title_activity_table_order_view">TableOrderView</string>
    <string name="title_activity_order_pay_view">OrderPayView</string>
    <string name="title_activity_new_order_view">NewOrderView</string>
    <string name="title_activity_order_control_view">OrderControlView</string>
    <string name="title_activity_product_description_list">Produktbeschreibungen</string>
    <string name="title_activity_menu_product_description_edit">MenuProductDescriptionEditActivity
    </string>

    -->
    <string name="save">Speichern</string>
    <string name="cancel">Abbrechen</string>
    <string name="back">Zurück</string>
    <string name="title_activity_product_description_view">Produktbeschreibung</string>
    <string name="description">Beschreibung</string>
    <string name="string_name">Name</string>
    <string name="title_activity_menu_product_edit">Menüposition bearbeiten</string>
    <string name="date_format">dd.MM.yyyy HH:mm</string>
    <string name="eventDate">Ausführungsdatum</string>
    <string name="eventProductList">Produktliste</string>
    <string name="number_of_tables">Anzahl Tische</string>
    <string name="title_activity_event_static_view">Fest Static</string>
    <string name="title_activity_product_list">Produktübersicht</string>
    <string name="string_volume">Menge</string>
    <string name="string_price">Preis</string>
    <string name="string_product_name">Name</string>
    <string name="title_activity_product_list_list_edit_view">Menüpunkt hinzufügen</string>
    <string name="cannot_delete_productList">Die gewählte Liste ist noch einem Event zugeordnet und kann deshalb nicht gelöscht werden</string>
    <string name="emptyProductDescriptionHintText">Es sind zurzeit keine Produktbeschreibungen verfügbar. Fügen Sie über den + Button neue Produktbeschreibungen hinzu!</string>
    <string name="title_activity_status">StatusActivity</string>
</resources>
