<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ch.hsr.edu.sinv_56082.gastroginiapp.ui.activities.order.OrderPayView"
    tools:showIn="@layout/activity_order_pay_view">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pay"
            android:id="@+id/payOrderTitle"
            android:textSize="16dp"
            android:padding="16dp"
            android:background="@color/colorSubTitleDark"
            android:textColor="@color/colorTextLight"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="3dp">

        <TextView
            android:id="@+id/product_item_name_count"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_weight="3"
            android:gravity="center"
            android:paddingLeft="@dimen/linear_layout_padding"
            android:text="@string/volume"
            android:background="@color/colorSubTitleDark"
            android:textColor="@color/colorIconLight"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/product_item_name_name"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/product"
            android:background="@color/colorSubTitleDark"
            android:textColor="@color/colorIconLight"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/product_item_name_size"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_weight="3"
            android:gravity="center"
            android:paddingLeft="@dimen/linear_layout_padding"
            android:text="@string/size"
            android:background="@color/colorSubTitleDark"
            android:textColor="@color/colorIconLight"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/product_item_name_price"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_weight="3"
            android:text="@string/preis"
            android:background="@color/colorSubTitleDark"
            android:textColor="@color/colorIconLight"
            android:textAlignment="center"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:id="@+id/orderPayRecyclerViewLL">

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/orderPayRecyclerView"
            android:layout_alignParentStart="true"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Subtotal:"
        android:id="@+id/order_pay_subtotal"
        android:layout_margin="@dimen/linear_layout_padding"
        android:textSize="16dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/linear_layout_padding"
        android:layout_below="@id/orderPayRecyclerViewLL"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center">

        <Button
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/cancelButton"
            android:layout_gravity="left"
            android:layout_marginRight="@dimen/linear_layout_padding" />

        <Button
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/complete"
            android:id="@+id/proceedButton"
            android:layout_gravity="right" />
    </LinearLayout>
</LinearLayout>
