<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:paddingLeft="16dp"
    android:paddingTop="8dp"
    android:paddingRight="16dp"
    android:paddingBottom="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/event_title"
        android:id="@+id/columnRowEventTitle"
        android:layout_gravity="center_vertical"
        android:textSize="16dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/amount_table"
        android:id="@+id/columnRowAmountOfTables"
        android:layout_gravity="center_vertical"
        android:textSize="12dp"
        android:layout_weight="1"
        android:textColor="@color/colorGreyText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/start_date"
        android:id="@+id/columnRowStartDate"
        android:layout_gravity="center_vertical"
        android:textSize="12dp"
        android:layout_weight="1"
        android:textColor="@color/colorGreyText" />

    <include layout="@layout/column_row_delete"/>

</LinearLayout>