<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:background="?android:attr/selectableItemBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/title"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/productTitle"
            android:textSize="16dp"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/description"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/productDescription"
            android:textSize="12dp"
            android:paddingLeft="16dp"
            android:paddingBottom="8dp"
            android:textColor="@color/colorGreyText"
            android:gravity="fill_vertical" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:text="@string/anzahl"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/productVolume"
        android:textSize="12dp"
        android:layout_weight="1"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        android:textColor="@color/colorGreyText"
        android:gravity="fill_vertical" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:text="@string/preis"
        android:layout_weight="1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/productPrice"
        android:textSize="12dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        android:textColor="@color/colorGreyText"
        android:gravity="fill_vertical" />

    <include
        android:layout_gravity="fill_vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        layout="@layout/column_row_delete" />


</LinearLayout>