<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/linear_layout_half_padding"
    android:background="?android:attr/selectableItemBackground">

    <TableRow
        android:stretchColumns="0,1,2"
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/linear_layout_padding"
        android:paddingRight="@dimen/linear_layout_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="0"
            android:layout_weight="10"
            android:id="@+id/amount_counter_order_pay"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/product_item_name_order_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_data_1"
            android:layout_weight="10"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/product_item_size_order_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="10"
            android:text="@string/dummy_data_2"
            android:textAlignment="center"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/product_item_price_order_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="10"
            android:text="@string/dummy_data_3"
            android:textAlignment="textEnd"
            android:paddingEnd="16dp"
            android:layout_gravity="center" />

    </TableRow>

</TableLayout>