<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ch.hsr.edu.sinv_56082.gastroginiapp.ui.activities.order.OrderControlView"
    tools:showIn="@layout/activity_order_control_view">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/order_contol_subtitel"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/summary_of_order"
                android:background="@color/colorSubTitleDark"
                android:textColor="@color/colorIconLight"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/orderControlRecyclerView"
                android:layout_alignParentStart="true"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:padding="@dimen/linear_layout_padding"
            android:gravity="center">

            <Button
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:id="@+id/backButton"
                android:layout_gravity="left"
                android:layout_margin="16dp" />
            <Button
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/close_order"
                android:id="@+id/finishButton"
                android:layout_gravity="right"
                android:layout_margin="16dp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
