<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ch.hsr.edu.sinv_56082.gastroginiapp.ui.activities.menu.MenuProductDescriptionEditActivity"
    tools:showIn="@layout/activity_menu_product_description_edit">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayoutEventView"
        android:padding="8dp"
        android:weightSum="1">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/productDescriptionEditNameLayout"
            android:layout_width="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/productDescriptionEditName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_name" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/productDescriptionEditDescLayout"
            android:layout_width="160dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            android:elegantTextHeight="true"
            android:inputType="number">

            <EditText
                android:id="@+id/productDescriptionEditDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description" />

        </android.support.design.widget.TextInputLayout>



        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/productDescriptionCategorySelect"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:focusable="true"
            android:spinnerMode="dialog" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/save"
            android:id="@+id/productDescriptionSaveButton" />

    </LinearLayout>

</RelativeLayout>
