<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ch.hsr.edu.sinv_56082.gastroginiapp.ui.activities.event.EventViewActivity"
    tools:showIn="@layout/activity_event_static_view">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayoutEventStaticView"
        android:padding="8dp"
        android:weightSum="1">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/eventStaticViewInputLayout"
            android:layout_width="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/eventStaticViewTitleInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Titel" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/eventStaticViewDatumInputLayout"
            android:layout_width="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            android:elegantTextHeight="true"
            android:inputType="number">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eventDate"/>

            <Button
                android:id="@+id/eventStaticViewDatumInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7" />

        <LinearLayout
            tools:context=".ui.activities.connection.StartEventActivity"
            tools:showIn="@layout/activity_start_event"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/eventStaticViewUserNameInputLayout"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/eventStaticViewUserNameInput"
                    android:layout_width="match_parent"
                    android:textSize="16dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/form_name" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/startEventPassword"
                android:layout_width="match_parent"
                android:layout_margin="16dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/eventStaticViewPasswordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:hint="@string/pass_hint"
                    android:password="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_height="match_parent"
                android:layout_width="160dp"
                android:id="@+id/eventStaticViewJoinButton"
                android:layout_gravity="right"
                android:layout_margin="16dp"
                android:text="@string/join"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
